# mcp-jira-server

./: .env.example  .gitignore  .mcp.json.example  README.md  mcp.json  pyproject.toml
src/mcp_jira_server/: client.py  config.py  formatting.py  server.py
