[project]
name = "mcp-jira-server"
version = "0.1.0"
description = "MCP server giving AI assistants access to Jira Cloud via the Jira REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "jira>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
mcp-jira-server = "mcp_jira_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jira_server"]
